llm/comfyui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: comfyui-service
  namespace: llm
  labels:
    app: comfyui
spec:
  type: NodePort
  selector:
    app: comfyui
  ports:
  - name: http
    port: 8188
    targetPort: 8188
    nodePort: 30818
