llm/comfyui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comfyui-ingress
  namespace: llm
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: comfy.ddellspe.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: comfyui-service
            port:
              number: 8188
  tls:
  - hosts:
    - comfy.ddellspe.dev
    secretName: ddellspe-tls
